--- a/Languages/English/Keyed/Outfitted_Keyed.xml
+++ b/Languages/English/Keyed/Outfitted_Keyed.xml
@@ -1,45 +1,47 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <LanguageData>
+	
+	<NoStatOptionsToShow>No stats match the filter</NoStatOptionsToShow>
+	
+	<PenaltyWornByCorpse>Penalty Worn by Corpse</PenaltyWornByCorpse>
+	<PenaltyWornByCorpseTooltip>Should Worn by Corpse matter in calculations?</PenaltyWornByCorpseTooltip>
 
-  <PenaltyWornByCorpse>Penalty Worn by Corpse</PenaltyWornByCorpse>
-  <PenaltyWornByCorpseTooltip>Should Worn by Corpse matter in calculations?</PenaltyWornByCorpseTooltip>
+	<AutoWorkPriorities>Automatic Work Priorities</AutoWorkPriorities>
+	<AutoWorkPrioritiesTooltip>If enabled, automatically adds weights for stats that are relevant to the assigned work types.</AutoWorkPrioritiesTooltip>
+  
+	<PreferedTemperature>Temperature range</PreferedTemperature>
+	<TemperatureRangeReset>Reset temperature range to seasonal temperature</TemperatureRangeReset>
+  
+	<AutoTemp>Automatic temperature range</AutoTemp>
+	<AutoTempTooltip>If enabled, automatically set the temperature range to the current seasonal temperature plus an offset</AutoTempTooltip>
 
-  <AutoWorkPriorities>Automatic Work Priorities</AutoWorkPriorities>
-  <AutoWorkPrioritiesTooltip>If enabled, automatically adds weights for stats that are relevant to the assigned work types.</AutoWorkPrioritiesTooltip>
+	<AutoTempOffset>Auto temp offset</AutoTempOffset>
+	<AutoTempOffsetTooltip>The amount to use as a buffer around the current seasonal temperature</AutoTempOffsetTooltip>
   
-  <PreferedTemperature>Temperature range</PreferedTemperature>
-  <TemperatureRangeReset>Reset temperature range to seasonal temperature</TemperatureRangeReset>
+	<PreferedStats>Stat priorities</PreferedStats>
   
-  <AutoTemp>Automatic temperature range</AutoTemp>
-  <AutoTempTooltip>If enabled, automatically set the temperature range to the current seasonal temperature plus an offset</AutoTempTooltip>
+	<StatPriorityAdd>Add new priority</StatPriorityAdd>
+	<StatPriorityReset>Reset priority for {0} to template priorities</StatPriorityReset>
+	<StatPriorityDelete>Remove priority for {0}</StatPriorityDelete>
 
-  <AutoTempOffset>Auto temp offset</AutoTempOffset>
-  <AutoTempOffsetTooltip>The amount to use as a buffer around the current seasonal temperature</AutoTempOffsetTooltip>
+	<OutfitShow>Toogle apparel score for selected colonist.</OutfitShow>
   
-  <PreferedStats>Stat priorities</PreferedStats>
-  
-  <StatPriorityAdd>Add new priority</StatPriorityAdd>
-  <StatPriorityReset>Reset priority for {0} to template priorities</StatPriorityReset>
-  <StatPriorityDelete>Remove priority for {0}</StatPriorityDelete>
-
-  <OutfitShow>Toogle apparel score for selected colonist.</OutfitShow>
-  
-  <!-- Outfits -->
-  <OutfitDoctor>Doctor</OutfitDoctor>
-  <OutfitWarden>Warden</OutfitWarden>
-  <OutfitHandler>Handler</OutfitHandler>
-  <OutfitCook>Cook</OutfitCook>
-  <OutfitHunter>Hunter</OutfitHunter>
-  <OutfitBuilder>Builder</OutfitBuilder>
-  <OutfitGrower>Grower</OutfitGrower>
-  <OutfitMiner>Miner</OutfitMiner>
-  <OutfitSmith>Smith</OutfitSmith>
-  <OutfitTailor>Tailor</OutfitTailor>
-  <OutfitArtist>Artist</OutfitArtist>
-  <OutfitCrafter>Crafter</OutfitCrafter>
-  <OutfitHauler>Hauler</OutfitHauler>
-  <OutfitCleaner>Cleaner</OutfitCleaner>
-  <OutfitResearcher>Researcher</OutfitResearcher>
-  <OutfitBrawler>Brawler</OutfitBrawler>
+	<!-- Outfits -->
+	<OutfitDoctor>Doctor</OutfitDoctor>
+	<OutfitWarden>Warden</OutfitWarden>
+	<OutfitHandler>Handler</OutfitHandler>
+	<OutfitCook>Cook</OutfitCook>
+	<OutfitHunter>Hunter</OutfitHunter>
+	<OutfitBuilder>Builder</OutfitBuilder>
+	<OutfitGrower>Grower</OutfitGrower>
+	<OutfitMiner>Miner</OutfitMiner>
+	<OutfitSmith>Smith</OutfitSmith>
+	<OutfitTailor>Tailor</OutfitTailor>
+	<OutfitArtist>Artist</OutfitArtist>
+	<OutfitCrafter>Crafter</OutfitCrafter>
+	<OutfitHauler>Hauler</OutfitHauler>
+	<OutfitCleaner>Cleaner</OutfitCleaner>
+	<OutfitResearcher>Researcher</OutfitResearcher>
+	<OutfitBrawler>Brawler</OutfitBrawler>
   
 </LanguageData>
