Working on generate policies btn. Decided to re-configure the window. Re-hooked to a parent

--- a/Languages/English/Keyed/Outfitted_Keyed.xml
+++ b/Languages/English/Keyed/Outfitted_Keyed.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <LanguageData>
 	
+	<NoOutfitSelected>No outfit selected</NoOutfitSelected>
 	<NoStatOptionsToShow>No stats match the filter</NoStatOptionsToShow>
 	
 	<PenaltyWornByCorpse>Penalty Worn by Corpse</PenaltyWornByCorpse>
